--- a/Quiron.LojaVirtual.Dominio/Quiron.LojaVirtual.Dominio.csproj
+++ b/Quiron.LojaVirtual.Dominio/Quiron.LojaVirtual.Dominio.csproj
@@ -72,7 +72,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Entidades\NewFolder1\" />
+    <Folder Include="Entidades\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
